fourth attempt at fixing horizontal overflow bug in the mobile version

--- a/src/index.css
+++ b/src/index.css
@@ -86,9 +86,7 @@ nav li a{
   align-items: center;
 }
 
-.root{
-  /* width:100vw;
-  position:fixed; */
+#root{
   overflow-x:hidden;
 }
 
